# Path: crates/vm/wasm/Cargo.toml
[package]
name = "ioi-vm-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
ioi-api = { path = "../../api" }
ioi-types = { path = "../../types" }
ioi-crypto = { path = "../../crypto" }
ioi-drivers = { path = "../../drivers" } # [NEW]

# Explicitly set wasmtime to 21.0.0 to match wasmtime-wasi 21.0.0
wasmtime = { version = "21.0.0", features = ["component-model", "async"] }
wasmtime-wasi = { version = "21.0.0" }
wit-component = "0.21.0"

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
thiserror = { workspace = true }
log = { workspace = true }

# Dependencies added for wasm_service
parity-scale-codec = { workspace = true, features = ["derive", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }                                       # [NEW]
toml = { workspace = true }
